[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/Intro.gd" type="Script" id=2]

[node name="Intro" type="Control"]
margin_right = 801.0
margin_bottom = 479.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -6.0
margin_top = -4.0
margin_right = 805.0
margin_bottom = 489.0
color = Color( 0.270588, 0.270588, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextFillTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
__meta__ = {
"_editor_description_": ""
}

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 13.0
margin_top = 11.0
margin_right = 789.0
margin_bottom = 469.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
visible = false
margin_left = 314.619
margin_top = 389.598
margin_right = 485.619
margin_bottom = 436.598

[node name="Label" type="Label" parent="StartButton"]
margin_left = 2.0
margin_right = 170.0
margin_bottom = 45.0
text = "Start"
align = 1
valign = 1
[connection signal="timeout" from="TextFillTimer" to="." method="_on_TextFillTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
